[package]
name = "rust-uniffi-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = { version = "0.24.3", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.24.3", features = ["build"] }

[lib]
crate-type = ["staticlib"]
name = "rust_uniffi_example"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
