[package]
name = "rust-uniffi-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]
name = "rust_uniffi_example"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.24", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.24", features = ["build"] }
