[package]
name = "regen-noir-fixtures"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
noir = { package = "noir", git = "https://github.com/zkmopro/noir-rs", features = [
    "barretenberg",
], tag = "v1.0.0-beta.19" }
serde_json = "1.0"

[[bin]]
name = "regen-noir-fixtures"
path = "src/main.rs"

[workspace]
