[package]
name = "regen-noir-fixtures"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# Pinned by immutable rev (tag v1.0.0-beta.19) so fixture regeneration is deterministic.
noir = { package = "noir", git = "https://github.com/zkmopro/noir-rs", features = [
    "barretenberg",
], rev = "0e4fdc9fc0cb383fcada7d3864dd2424f137316b" }
serde_json = "1.0"

[[bin]]
name = "regen-noir-fixtures"
path = "src/main.rs"

[workspace]
