[package]
name = "example-gpu-exploration"
version = "0.1.0"
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
num-bigint = { version = "=0.4.3", default-features = false, features = [
    "rand",
] }
ark-bn254 = { version = "=0.4.0" }
ark-serialize = { version = "=0.4.1", features = ["derive"] }

# FIXME: This doesn't work due to custom build command in mopro-core
mopro-core = { git = "https://github.com/zkmopro/mopro.git", package = "mopro-core", features = ["gpu-benchmarks"] }

# NOTE: This works, set it to MOPRO_ROOT/mopro-core
#mopro-core = { path = "../mopro-core", package = "mopro-core" }

# NOTE: For this to work we need dedicated package, not just workspace
# mopro = { path = "../" }

[patch.crates-io]
# NOTE: Forked wasmer to work around memory limits
# See https://github.com/wasmerio/wasmer/commit/09c7070
wasmer = { git = "https://github.com/oskarth/wasmer.git", rev = "09c7070" }

# NOTE: For patching the version 0.3 and 0.4 for arkworks
ark-bls12-377-3 = { git = 'https://github.com/arkworks-rs/curves.git', package = 'ark-bls12-377', tag = 'v0.3.0', optional = true}
ark-ec-3 = { git = 'https://github.com/arkworks-rs/algebra.git', package = 'ark-ec', tag = 'v0.3.0', features = ["parallel"], optional = true }
ark-ff-3 = { git = 'https://github.com/arkworks-rs/algebra.git', package = 'ark-ff', tag = 'v0.3.0', features = ["parallel"], optional = true }
ark-serialize-3 = { git = 'https://github.com/arkworks-rs/algebra.git', package = 'ark-serialize', tag = 'v0.3.0', optional = true }
ark-std-3 = { git = 'https://github.com/arkworks-rs/std.git', package = 'ark-std', tag = 'v0.3.0', optional = true }
