[package]
name = "mopro-example-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
num-bigint = { version = "=0.4.3", default-features = false, features = [
    "rand",
] }
ark-bn254 = { version = "=0.4.0" }

# FIXME: This doesn't work due to custom build command in mopro-core
mopro-core = { git = "https://github.com/oskarth/mopro.git", package = "mopro-core" }

# NOTE: This works, set it to MOPRO_ROOT/mopro-core
#mopro-core = { path = "../mopro-core", package = "mopro-core" }

# NOTE: For this to work we need dedicated package, not just workspace
# mopro = { path = "../" }

[patch.crates-io]
# NOTE: Forked wasmer to work around memory limits
# See https://github.com/wasmerio/wasmer/commit/09c7070
wasmer = { git = "https://github.com/oskarth/wasmer.git", rev = "09c7070" }
