[package]
name = "MOPRO_TEMPLATE_PROJECT_NAME"
version = "0.1.0"
edition = "2021"

# We're going to build a static library named mopro_bindings
# This library name should not be changed
[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "mopro_bindings"

# Adapters for different proof systems
[features]
default = ["<FEATURES>"]

[dependencies]
mopro-wasm = { git = "https://github.com/zkmopro/mopro.git" }
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git" }
circom-prover = { git = "https://github.com/zkmopro/mopro.git" }
rust-witness = "0.1"
uniffi = { version = "=0.29.0" }
num-bigint = "0.4.0"
thiserror= "=2.0.3"
# HALO2_DEPENDENCIES

[build-dependencies]
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git" }
rust-witness = "0.1"
uniffi = { version = "=0.29.0", features = ["build"] }

# CIRCOM_DEPENDENCIES
